[gd_scene load_steps=13 format=3 uid="uid://cigpy34phehbr"]

[ext_resource type="Script" path="res://addons/event_tree_plugin/event_tree_graph_editor.gd" id="1_5451c"]
[ext_resource type="Script" path="res://addons/event_tree_plugin/event_type_list.gd" id="1_mpg4u"]
[ext_resource type="Script" path="res://addons/event_tree_plugin/event_tree_graph.gd" id="2_hkr87"]
[ext_resource type="PackedScene" uid="uid://djsotsx2h2akd" path="res://addons/event_tree_plugin/task_node/start_node.tscn" id="4_cq1ix"]
[ext_resource type="Script" path="res://addons/event_tree_plugin/event_picker.gd" id="5_5212g"]
[ext_resource type="PackedScene" uid="uid://dhjaa2rvtsb4w" path="res://addons/event_tree_plugin/task_node/console_log_node.tscn" id="5_rlkc1"]
[ext_resource type="PackedScene" uid="uid://cr37f2ebcj6kc" path="res://addons/event_tree_plugin/task_node/dialogue_node.tscn" id="8_dwr4h"]
[ext_resource type="Script" path="res://addons/event_tree_plugin/task_node.gd" id="9_k821p"]
[ext_resource type="PackedScene" uid="uid://djq6hwf312whs" path="res://addons/event_tree_plugin/task_node/wait_node.tscn" id="9_vr2na"]
[ext_resource type="Script" path="res://script/system/event/task_action/set_memory_task_action.gd" id="10_h206v"]
[ext_resource type="PackedScene" uid="uid://b8grwpsb8a8t5" path="res://addons/event_tree_plugin/task_node/animation_node.tscn" id="11_1e0xf"]

[sub_resource type="Resource" id="Resource_4fdhd"]
script = ExtResource("10_h206v")

[node name="Event Tree Graph Editor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5451c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 1080.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(640, 60)
layout_mode = 2
color = Color(0.412152, 0.412152, 0.412152, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="PathLabel" type="Label" parent="VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Path"

[node name="Open" type="Button" parent="VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Open"

[node name="Save" type="Button" parent="VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Save
"

[node name="EventNodeList" type="ItemList" parent="VBoxContainer" node_paths=PackedStringArray("event_graph", "task_node_type_parent")]
layout_mode = 2
size_flags_vertical = 3
item_count = 5
item_0/text = "ConsoleLog"
item_1/text = "Dialogue"
item_2/text = "Wait"
item_3/text = "Animate"
item_4/text = "SetMemory"
script = ExtResource("1_mpg4u")
event_graph = NodePath("../../EventGraph")
task_node_type_parent = NodePath("../../TaskNodeTypeParent")

[node name="EventGraph" type="GraphEdit" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.639992
grow_horizontal = 0
grow_vertical = 2
right_disconnects = true
script = ExtResource("2_hkr87")
start_node_prefab = ExtResource("4_cq1ix")

[node name="StartNode" parent="EventGraph" instance=ExtResource("4_cq1ix")]
layout_mode = 0
offset_left = 200.0
offset_top = 200.0
offset_right = 342.0
offset_bottom = 288.0
position_offset = Vector2(200, 200)

[node name="TaskNodeTypeParent" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ConsoleLog" parent="TaskNodeTypeParent" instance=ExtResource("5_rlkc1")]
layout_mode = 0

[node name="Dialogue" parent="TaskNodeTypeParent" instance=ExtResource("8_dwr4h")]
layout_mode = 0

[node name="Wait" parent="TaskNodeTypeParent" instance=ExtResource("9_vr2na")]
layout_mode = 0

[node name="Animate" parent="TaskNodeTypeParent" instance=ExtResource("11_1e0xf")]
layout_mode = 0

[node name="SetMemory" type="GraphNode" parent="TaskNodeTypeParent"]
layout_mode = 2
offset_right = 221.0
offset_bottom = 186.0
title = "Animation"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("9_k821p")
task_action = SubResource("Resource_4fdhd")

[node name="Resource Path" type="TextEdit" parent="TaskNodeTypeParent/SetMemory"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
placeholder_text = "Resource Path"

[node name="Key" type="TextEdit" parent="TaskNodeTypeParent/SetMemory"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
placeholder_text = "Key"

[node name="Value" type="TextEdit" parent="TaskNodeTypeParent/SetMemory"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
placeholder_text = "Value"

[node name="EventTreePicker" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(800, 800)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tres")
script = ExtResource("5_5212g")

[connection signal="pressed" from="VBoxContainer/ColorRect/HBoxContainer/Open" to="EventTreePicker" method="open"]
[connection signal="pressed" from="VBoxContainer/ColorRect/HBoxContainer/Save" to="." method="save_event_tree"]
[connection signal="empty_clicked" from="VBoxContainer/EventNodeList" to="VBoxContainer/EventNodeList" method="_on_empty_clicked"]
[connection signal="item_activated" from="VBoxContainer/EventNodeList" to="VBoxContainer/EventNodeList" method="_on_item_activated"]
[connection signal="connection_drag_started" from="EventGraph" to="EventGraph" method="_on_connection_drag_started"]
[connection signal="connection_request" from="EventGraph" to="EventGraph" method="_on_connection_request"]
[connection signal="delete_nodes_request" from="EventGraph" to="EventGraph" method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="EventGraph" to="EventGraph" method="_on_disconnection_request"]
[connection signal="file_selected" from="EventTreePicker" to="." method="open_event_tree"]
